@startuml
namespace System {
package "Presentation layer"  as presentation {
  class buildings <<jsp>>
  class editbuildings<<jsp>>

  class RenderUtil 
  class UpdateBuilding
  buildings - editbuildings: links >
  editbuildings - UpdateBuilding: posts >
  UpdateBuilding - RenderUtil: uses >
}

package "domain layer"  as domain {
}

package "DB layer" as DB {
  class DBConnection
}

presentation --> domain.DomainFacade  : uses

presentation --> domain.Building : depends on
domain --> DB.DBFacade :uses
DB.DBFacade --> domain.Building : depends on

}
@enduml
